--- a/App/sample-app/devops/service.yaml
+++ b/App/sample-app/devops/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sample-app-service
+  name: [SERVICE_NAME]-service
 spec:
   selector:
-    app: sample-app-pod 
+    app: [SERVICE_NAME]-pod 
   ports:
     - port: 80 
       targetPort: 8080 
