--- a/App/application-controller/pom.xml
+++ b/App/application-controller/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.10</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.4</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
