--- a/App/microservice-controller/pom.xml
+++ b/App/microservice-controller/pom.xml
@@ -33,6 +33,12 @@
 			<artifactId>kubernetes-client</artifactId>
 			<version>6.2.0</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.workday</groupId>
+			<artifactId>timeseries-forecast</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
